--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,22 @@
+* {
+    box-sizing: border-box;
+    padding:0;
+    margin:0;
+}
 
+html, body {
+    min-height:100vw;
+}
+
+
+.contrast--direction h3 {
+    transform-origin:0 0;
+}
+
+#output {
+    border:1px solid black;
+    margin-left:50%
+}
 /* 
 .contrast--scale h1 {
 
