--- a/css/main.css
+++ b/css/main.css
@@ -3,30 +3,27 @@
     padding:0;
     margin:0;
 }
+@import url("https://use.typekit.net/pfp3zhq.css");
 
 html, body {
     min-height:100vw;
+    font-family: aktiv-grotesk, sans-serif;
 }
 
+.grid{
+    display: grid;
+    grid-template-columns: 30% 70%;
+
+}
+.controls{
+    display: flex;
+    flex-direction: column;
+}
 
 .contrast--direction h3 {
     transform-origin:0 0;
 }
 
 #output {
-    border:1px solid black;
-    margin-left:50%
+    margin-left:15%
 }
-/* 
-.contrast--scale h1 {
-
-    font-size:50px;
-
-}
-
-
-.contrast--scale p {
-
-    font-size:15px;
-
-} */
